# Prime-Number-Generato

./: README.md
prime_benchmarking/: CMakeLists.txt  README.md  build_and_run.sh  primesoeBenchmark.cc
prime_numbers_SoE/: CMakeLists.txt  README.md  build_and_run.sh  primeclass  primeclass.cpp
prime_parallel/: CMakeLists.txt  README.md  build_and_run.sh  main.cpp  util.cpp  util.hpp
